--- a/index.html
+++ b/index.html
@@ -2,36 +2,36 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+<meta charset="utf-8">
 
-    <title>PHP Extensions Development</title>
+<title>PHP Extensions Development</title>
 
-    <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-    <meta name="author" content="Hakim El Hattab">
+<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+<meta name="author" content="Hakim El Hattab">
 
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="css/reveal.min.css">
-    <link rel="stylesheet" href="css/theme/default.css" id="theme">
+<link rel="stylesheet" href="css/reveal.min.css">
+<link rel="stylesheet" href="css/theme/default.css" id="theme">
 
-    <!-- For syntax highlighting -->
-    <link rel="stylesheet" href="lib/css/zenburn.css">
+<!-- For syntax highlighting -->
+<link rel="stylesheet" href="lib/css/zenburn.css">
 
-    <!-- If the query includes 'print-pdf', include the PDF print sheet -->
-    <script>
-        if (window.location.search.match(/print-pdf/gi)) {
-            var link = document.createElement('link');
-            link.rel = 'stylesheet';
-            link.type = 'text/css';
-            link.href = 'css/print/pdf.css';
-            document.getElementsByTagName('head')[0].appendChild(link);
-        }
-    </script>
+<!-- If the query includes 'print-pdf', include the PDF print sheet -->
+<script>
+if (window.location.search.match(/print-pdf/gi)) {
+    var link = document.createElement('link');
+    link.rel = 'stylesheet';
+    link.type = 'text/css';
+    link.href = 'css/print/pdf.css';
+    document.getElementsByTagName('head')[0].appendChild(link);
+}
+</script>
 
-    <!--[if lt IE 9]>
+<!--[if lt IE 9]>
     <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
 </head>
@@ -46,8 +46,8 @@
             <h1>PHP Extensions Development</h1>
 
             <p>
-                <small>Created by Lorenzo Fontana / <a
-                        href="http://github.com/fntlnz">@fntlnz</a></small>
+            <small>Created by Lorenzo Fontana / <a
+                    href="http://github.com/fntlnz">@fntlnz</a></small>
             </p>
 
         </section>
@@ -55,7 +55,7 @@
             <h2>Topics</h2>
             <ul>
                 <li>Why an extension?</li>
-                <li>PHP Life cycle</li>
+                <li>PHP Life cycles</li>
                 <li>Environment Setup</li>
                 <li>Hello World</li>
                 <li>Memory management</li>
@@ -74,7 +74,7 @@
         </section>
         <section>
             <section>
-                <h2>PHP Life cycle</h2>
+                <h2>PHP Life cycles</h2>
             </section>
             <section>
                 <h3>CLI (Single request life cycle)</h3>
@@ -93,6 +93,40 @@
             <section>
                 <h2>Environment Setup</h2>
             </section>
+            <section>
+                <p>Grab the latest version of PHP from Github</p>
+                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">git clone https://github.com/php/php-src.git
+git checkout tags/php-5.6.3         
+                </code></pre>
+            </section>
+            <section>
+                <p>Configure it for PHP Development</p>
+                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">./configure --prefix=/tmp/php-debug --enable-debug --enable-maintainer-zts \
+--disable-cgi --enable-cli --disable-pear --with-readline</code></pre>
+                <p>
+                <ul style="font-size:28px">
+                    <li><strong>enable-debug</strong> :Memory leaks reporting and compile with debugging symbols</li>
+                    <li><strong>enable-maintainer-zts</strong> : Build with the thread-safe resource manager 
+                </ul>
+                </p>
+            </section>
+            <section>
+                <p>Make and install</p>
+                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">make -j2
+sudo make installi</code></pre>
+                 <p>According to our configuration options this will compile PHP and install it into the /tmp/php-debug folder.</p>
+                 <br>
+                 <p>To use it temporarily in place of your working PHP just prepend it's location to the <strong>$PATH</strong></p>
+                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">export $PATH="/tmp/php-debugi/bin:$PATH"</code></pre>
+
+                <br>
+                <p>Now issuing a <i>php -v</i> should show something like</p>
+                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">PHP 5.6.3 (cli) (built: Oct 20 2014 19:00:00) (DEBUG)
+Copyright (c) 1997-2014 The PHP Group
+Zend Engine v2.6.0, Copyright (c) 1998-2014 Zend Technologies
+                </code></pre>
+ 
+            </section>
         </section>
         <section>
             <section>
@@ -101,7 +135,7 @@
             <section data-state="customevent">
                 <h3>config.m4</h3>
                 <p>Template to generate a <code class="bash" style="font-size: 0.7em">configure</code> script with phpize.</p>
-					<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
+                    <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
 dnl config.m4 for extension hello_world
 
 PHP_ARG_WITH(hello_world, whether to enable hello world support,
@@ -110,11 +144,11 @@ PHP_ARG_WITH(hello_world, whether to enable hello world support,
 if test "$PHP_HELLOWORLD" != "no"; then
     PHP_NEW_EXTENSION(hello_world, hello_world.c, $ext_shared)
 fi
-                    </code></pre>
+                </code></pre>
             </section>
             <section data-state="customevent">
                 <h3>php_hello_world.h</h3>
-					<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;" class="c">
+                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;" class="c">
 #ifndef PHP_HELLO_WORLD_H
 #define PHP_HELLO_WORLD_H
 
@@ -128,11 +162,11 @@ fi
 #define PHP_HELLO_WORLD_VERSION "0.1.0" /* Replace with version number for your extension */
 
 #endif	/* PHP_HELLO_WORLD_H */
-                    </code></pre>
+                </code></pre>
             </section>
             <section data-state="customevent">
                 <h3>hello_world.c</h3>
-					<pre><code data-trim contenteditable style="font-size: 15px; margin-top: 20px" class="c">
+                <pre><code data-trim contenteditable style="font-size: 15px; margin-top: 20px" class="c">
 #include "php_hello_world.h"
 
 PHP_FUNCTION (hello_world) {
@@ -176,25 +210,25 @@ zend_module_entry hello_world_module_entry = {
 #ifdef COMPILE_DL_HELLO_WORLD
 ZEND_GET_MODULE(hello_world)
 #endif
-                    </code></pre>
+                </code></pre>
             </section>
 
             <section data-state="customevent">
                 <h3>Configure and Build Dinamically</h3>
-					<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
+                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
                         phpize
-                    </code></pre>
-                    <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
+                </code></pre>
+                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
                         ./configure
-                    </code></pre>
-                    <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
+                </code></pre>
+                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
                         make
-                    </code></pre>
-                    <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
+                </code></pre>
+                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
                         php -d extension=modules/hello_world.so -r 'echo hello_world("Lorenzo");'
-                    </code></pre>
+                </code></pre>
             </section>
-</section>
+        </section>
         <section>
             <section>
                 <h2>Memory Management</h2>
@@ -256,55 +290,55 @@ ZEND_GET_MODULE(hello_world)
 
 <script>
 
-    // Full list of configuration options available here:
-    // https://github.com/hakimel/reveal.js#configuration
-    Reveal.initialize({
-        controls: true,
-        progress: true,
-        history: true,
-        center: true,
+// Full list of configuration options available here:
+// https://github.com/hakimel/reveal.js#configuration
+Reveal.initialize({
+controls: true,
+progress: true,
+history: true,
+center: true,
 
-        theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-        transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
+transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
 
-        // Parallax scrolling
-        // parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
-        // parallaxBackgroundSize: '2100px 900px',
+// Parallax scrolling
+// parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
+// parallaxBackgroundSize: '2100px 900px',
 
-        // Optional libraries used to extend on reveal.js
-        dependencies: [
-            {
-                src: 'lib/js/classList.js', condition: function () {
-                return !document.body.classList;
-            }
-            },
-            {
-                src: 'plugin/markdown/marked.js', condition: function () {
-                return !!document.querySelector('[data-markdown]');
-            }
-            },
-            {
-                src: 'plugin/markdown/markdown.js', condition: function () {
-                return !!document.querySelector('[data-markdown]');
-            }
-            },
-            {
-                src: 'plugin/highlight/highlight.js', async: true, callback: function () {
-                hljs.initHighlightingOnLoad();
-            }
-            },
-            {
-                src: 'plugin/zoom-js/zoom.js', async: true, condition: function () {
-                return !!document.body.classList;
-            }
-            },
-            {
-                src: 'plugin/notes/notes.js', async: true, condition: function () {
-                return !!document.body.classList;
-            }
-            }
-        ]
-    });
+// Optional libraries used to extend on reveal.js
+dependencies: [
+{
+src: 'lib/js/classList.js', condition: function () {
+return !document.body.classList;
+}
+},
+{
+src: 'plugin/markdown/marked.js', condition: function () {
+         return !!document.querySelector('[data-markdown]');
+     }
+},
+{
+src: 'plugin/markdown/markdown.js', condition: function () {
+         return !!document.querySelector('[data-markdown]');
+     }
+},
+{
+src: 'plugin/highlight/highlight.js', async: true, callback: function () {
+         hljs.initHighlightingOnLoad();
+     }
+},
+{
+src: 'plugin/zoom-js/zoom.js', async: true, condition: function () {
+         return !!document.body.classList;
+     }
+},
+{
+src: 'plugin/notes/notes.js', async: true, condition: function () {
+         return !!document.body.classList;
+     }
+}
+]
+});
 
 </script>
 
