--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 
 <title>PHP Extensions Development</title>
 
-<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-<meta name="author" content="Hakim El Hattab">
-
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
 
@@ -20,6 +17,29 @@
 <!-- For syntax highlighting -->
 <link rel="stylesheet" href="lib/css/zenburn.css">
 
+<style>
+
+.reveal table {
+    margin: auto;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+.reveal table th {
+    font-weight: bold;
+}
+
+.reveal table th,
+.reveal table td {
+    text-align: left;
+    padding: 0.2em 0.5em 0.2em 0.5em;
+    border-bottom: 1px solid;
+}
+
+.force-font-sm {
+    font-size:18px !important;
+}
+</style>
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
 if (window.location.search.match(/print-pdf/gi)) {
@@ -114,9 +134,9 @@ git checkout tags/php-5.6.3
                 <p>Make and install</p>
                 <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">make -j2
 sudo make install</code></pre>
-                 <p>According to our configuration options this will compile PHP and install it into the /tmp/php-debug folder.</p>
-                 <br>
-                 <p>To use it temporarily in place of your working PHP just prepend it's location to the <strong>$PATH</strong></p>
+                <p>According to our configuration options this will compile PHP and install it into the /tmp/php-debug folder.</p>
+                <br>
+                <p>To use it temporarily in place of your working PHP just prepend it's location to the <strong>$PATH</strong></p>
                 <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">export $PATH="/tmp/php-debugi/bin:$PATH"</code></pre>
 
                 <br>
@@ -125,45 +145,45 @@ sudo make install</code></pre>
 Copyright (c) 1997-2014 The PHP Group
 Zend Engine v2.6.0, Copyright (c) 1998-2014 Zend Technologies
                 </code></pre>
- 
+
             </section>
             <section>
-            <h3>Just remember that</h3>
-            <pre><code data-trim contenteditable>PHP With Debug Flags === Overhead</code></pre>
+                <h3>Just remember that</h3>
+                <pre><code data-trim contenteditable>PHP With Debug Flags === Overhead</code></pre>
 
-            <table class="reveal">
-                <tr>
-                    <td>PHP</td>
-                    <td>PHP (DEBUG)</td>
-                </tr>
-                <tr>
-                    <td>
-            <pre><code class="bash" data-trim contenteditable>
-php Zend/bench.php                 
-simple             0.058
-simplecall         0.083
-simpleucall        0.087
-simpleudcall       0.088
-mandel             0.145
-mandel2            0.198
-ackermann(7)       0.078
-ary(50000)         0.014
-ary2(50000)        0.015
-ary3(2000)         0.123
-fibo(30)           0.275
-hash1(50000)       0.025
-hash2(500)         0.022
-heapsort(20000)    0.058
-matrix(20)         0.064
-nestedloop(12)     0.111
-sieve(30)          0.075
-strcat(200000)     0.009
-------------------------
-Total              1.527
-            </code></pre>
-        </td>
-        <td>
- <pre><code class="bash" data-trim contenteditable>
+                <table class="reveal">
+                    <tr>
+                        <td>PHP</td>
+                        <td>PHP (DEBUG)</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <pregdb --tui --args ><code class="bash" data-trim contenteditable>
+                                php Zend/bench.php                 
+                                simple             0.058
+                                simplecall         0.083
+                                simpleucall        0.087
+                                simpleudcall       0.088
+                                mandel             0.145
+                                mandel2            0.198
+                                ackermann(7)       0.078
+                                ary(50000)         0.014
+                                ary2(50000)        0.015
+                                ary3(2000)         0.123
+                                fibo(30)           0.275
+                                hash1(50000)       0.025
+                                hash2(500)         0.022
+                                heapsort(20000)    0.058
+                                matrix(20)         0.064
+                                nestedloop(12)     0.111
+                                sieve(30)          0.075
+                                strcat(200000)     0.009
+                                ------------------------
+                                Total              1.527
+                            </code></pre>
+                        </td>
+                        <td>
+                            <pre><code class="bash" data-trim contenteditable>
  php Zend/bench.php 
  simple             0.234
  simplecall         0.433
@@ -185,18 +205,18 @@ Total              1.527
  strcat(200000)     0.033
  ------------------------
  Total              6.716
-            </code></pre>
-        </tr>
-    </table>
+                            </code></pre>
+                        </tr>
+                    </table>
+                </section>
             </section>
-        </section>
-        <section>
             <section>
-                <h2>Hello World PHP Extension</h2>
-            </section>
-            <section data-state="customevent">
-                <h3>config.m4</h3>
-                <p>Template to generate a <code class="bash" style="font-size: 0.7em">configure</code> script with phpize.</p>
+                <section>
+                    <h2>Hello World PHP Extension</h2>
+                </section>
+                <section data-state="customevent">
+                    <h3>config.m4</h3>
+                    <p>Template to generate a <code class="bash" style="font-size: 0.7em">configure</code> script with phpize.</p>
                     <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
 dnl config.m4 for extension hello_world
 
@@ -206,11 +226,11 @@ PHP_ARG_WITH(hello_world, whether to enable hello world support,
 if test "$PHP_HELLOWORLD" != "no"; then
     PHP_NEW_EXTENSION(hello_world, hello_world.c, $ext_shared)
 fi
-                </code></pre>
-            </section>
-            <section data-state="customevent">
-                <h3>php_hello_world.h</h3>
-                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;" class="c">
+                    </code></pre>
+                </section>
+                <section data-state="customevent">
+                    <h3>php_hello_world.h</h3>
+                    <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;" class="c">
 #ifndef PHP_HELLO_WORLD_H
 #define PHP_HELLO_WORLD_H
 
@@ -224,11 +244,11 @@ fi
 #define PHP_HELLO_WORLD_VERSION "0.1.0" /* Replace with version number for your extension */
 
 #endif	/* PHP_HELLO_WORLD_H */
-                </code></pre>
-            </section>
-            <section data-state="customevent">
-                <h3>hello_world.c</h3>
-                <pre><code data-trim contenteditable style="font-size: 15px; margin-top: 20px" class="c">
+                    </code></pre>
+                </section>
+                <section data-state="customevent">
+                    <h3>hello_world.c</h3>
+                    <pre><code data-trim contenteditable style="font-size: 15px; margin-top: 20px" class="c">
 #include "php_hello_world.h"
 
 PHP_FUNCTION (hello_world) {
@@ -273,98 +293,162 @@ zend_module_entry hello_world_module_entry = {
 #ifdef COMPILE_DL_HELLO_WORLD
 ZEND_GET_MODULE(hello_world)
 #endif
-                </code></pre>
-            </section>
+                    </code></pre>
+                </section>
 
-            <section data-state="customevent">
-                <h3>Configure and Build Dinamically</h3>
-                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
+                <section data-state="customevent">
+                    <h3>Configure and Build Dinamically</h3>
+                    <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
                         phpize
-                </code></pre>
-                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
+                    </code></pre>
+                    <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
                         ./configure
-                </code></pre>
-                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
+                    </code></pre>
+                    <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
                         make
-                </code></pre>
-                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
+                    </code></pre>
+                    <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px" class="bash">
                         php -d extension=modules/hello_world.so -r 'echo hello_world("Lorenzo");'
-                </code></pre>
-            </section>
-        </section>
-        <section>
-            <section>
-                <h2>Memory Management</h2>
-            </section>
-        </section>
-        <section>
-            <section>
-                <h2>Variables and Data Types</h2>
-            </section>
-        </section>
-        <section>
-            <section>
-                <h2>Objects</h2>
-            </section>
-        </section>
-        <section>
-            <section>
-                <h2>Debugging</h2>
+                    </code></pre>
+                </section>
             </section>
             <section>
-                <h3>Just GDB</h3>
-                <pre style="width: 110%"><code>gdb --tui --args php -d extension=modules/hello_world.so -r 'echo hello_world("Lorenzo");'</code></pre>
-                <h3>Or perhaps CGDB</h3>
-                <pre style="width: 110%"><code>cgdb --args php -d extension=modules/hello_world.so -r 'echo hello_world("Lorenzo");'</code></pre>
-            </section>
-            <section>
-                <h3>Macro Expansion</h3>
-            </section>
-        </section>
-        <section>
-            <h2>What's next</h2>
-            Embedding, streams etc...
-        </section>
-        <section class="present stack" style="display: block;">
-            <section class="future" style="display: block;">
-                <h2>References</h2>
+                <section>
+                    <h2>Memory Management</h2>
+                </section>
+                <section>
+                    <h3>(ZMM) Zend Memory Manager</h3> 
+                    <p>
+                    <ul>
+                        <li>Implicit memory cleanup at the end of each request</li>
+                        <li>Wraps OS's memory management layer providing the e* contuerparts</li>
+                        <li>Allows persistent allocation via the p* allocators</li>
+                    </ul>
+                    </p>
+                </section>
+                <section>
+                    <h3>Main Memory APIs</h3>
+                    <table  class="reveal force-font-sm">
+                        <thead>
+                            <tr>
+                                <th>Prototype</th>
+                                <th style="width: 50% !important;">Description</th>
+                            </tr>
 
-                <h3>Spaghetti.io</h3>
-                <ul>
-                    <li><a href="http://spaghetti.io/cont/article/getting-started-with-php-extensions-development/52/1.html">Getting started with PHP Extensions development</a></li>
-                </ul>
-                <h3>Web</h3>
-                <ul>
-                    <li><a href="https://github.com/php/php-src/tree/master/ext">php-src/ext</a></li>
-                    <li><a href="https://github.com/search?l=C&q=php&type=Repositories&utf8=%E2%9C%93">Search for PHP
-                        filtering for C language on GitHub</a></li>
-                    <li><a href="http://phpinternalsbook.com">phpinternalsbook.com</a></li>
-                    <li><a href="http://devzone.zend.com/303/extension-writing-part-i-introduction-to-php-and-zend/">Extension
-                        Writing Part I: Introduction to PHP and Zend</a></li>
-                    <li><a href="http://devzone.zend.com/317/extension-writing-part-ii-parameters-arrays-and-zvals">Extension
-                        Writing Part II: Parameters, Arrays, and ZVALs</a></li>
-                </ul>
-                <h3>Books</h3>
-                <ul>
-                    <li><a href="http://amzn.com/067232704X">Extending and Embedding PHP by Sara Golemon</a></li>
-                </ul>
+                        </thead>
+
+                        <tbody>
+
+                        <tr>
+                            <td><code class="code">void *emalloc(size_t size)</code><br><code class="code">void *pemalloc(size_t count, char persistent);</code></td>
+                            <td>Allocate <code class="code">size</code> bytes of memory.</td>
+                        </tr>
+
+
+                        <tr>
+                            <td><code class="code">void *ecalloc(size_t count); </code><br><code class="code">void *pecalloc(size_t count, char persistent);</code></td>
+                            <td>
+                                Allocate a buffer for <code class="code">nmemb</code> elements of
+                                <code class="code">size</code> bytes and makes sure it is initialized with zeros.
+                            </td>
+                        </tr>
+
+
+                        <tr>
+                            <td><code class="code">void *erealloc(void *ptr, size_t count); </code><br><code class="code">void *perealloc(void *ptr, size_t count, char persistent);</code></td>
+                            <td>
+                                Resize the buffer <code class="code">ptr</code>, which was allocated using
+                                <code class="code">emalloc</code> to hold <code class="code">size</code> bytes of memory.
+                            </td>
+                        </tr>
+
+
+                        <tr>
+                            <td><code class="code">void efree(void *ptr);</code><br><code class="code">void pefree(void *ptr, char persistent);<code></td>
+                            <td>
+                                Free the buffer pointed by <code class="code">ptr</code>. The buffer had to be 
+                                allocated by <code class="code">emalloc</code>.
+                            </td>
+                        </tr>
+
+
+                        <tr>
+                            <td><code class="code">void *estrdup(void *ptr); <br><code class="code">void *pestrdup(void *ptr, char persistent);<code></td>
+                            <td>
+                                Allocate a buffer that can hold the NULL-terminated string
+                                <code class="code">s</code> and copy the <code class="code">s</code> into that buffer.
+                            </td>
+                        </tr>
+
+                        </tbody>
+
+                    </table>
+                </section>
             </section>
-        </section>
-        <section>
-            <h1>Questions?</h1>
-        </section>
+            <section>
+                <section>
+                    <h2>Variables and Data Types</h2>
+                </section>
+            </section>
+            <section>
+                <section>
+                    <h2>Objects</h2>
+                </section>
+            </section>
+            <section>
+                <section>
+                    <h2>Debugging</h2>
+                    <h3>Just GDB</h3>
+                    <pre style="width: 110%"><code>gdb --tui --args php -d extension=modules/hello_world.so -r 'echo hello_world("Lorenzo");'</code></pre>
+                    <h3>Or perhaps CGDB</h3>
+                    <pre style="width: 110%"><code>cgdb --args php -d extension=modules/hello_world.so -r 'echo hello_world("Lorenzo");'</code></pre>
+                </section>
+            </section>
+            <section>
+                <h2>What's next</h2>
+                Embedding, streams etc...
+            </section>
+            <section class="present stack" style="display: block;">
+                <section class="future" style="display: block;">
+                    <h2>References</h2>
+
+                    <h3>Spaghetti.io</h3>
+                    <ul>
+                        <li><a href="http://spaghetti.io/cont/article/getting-started-with-php-extensions-development/52/1.html">Getting started with PHP Extensions development</a></li>
+                    </ul>
+                    <h3>Web</h3>
+                    <ul>
+                        <li><a href="https://github.com/php/php-src/tree/master/ext">php-src/ext</a></li>
+                        <li><a href="https://github.com/search?l=C&q=php&type=Repositories&utf8=%E2%9C%93">Search for PHP
+                            filtering for C language on GitHub</a></li>
+                        <li><a href="http://phpinternalsbook.com">phpinternalsbook.com</a></li>
+                        <li><a href="http://devzone.zend.com/303/extension-writing-part-i-introduction-to-php-and-zend/">Extension
+                            Writing Part I: Introduction to PHP and Zend</a></li>
+                        <li><a href="http://devzone.zend.com/317/extension-writing-part-ii-parameters-arrays-and-zvals">Extension
+                            Writing Part II: Parameters, Arrays, and ZVALs</a></li>
+                        <li><a href="http://php.net/manual/en/internals2.memory.management.php">Basic memory management</a></li>
+                    </ul>
+                    <h3>Books</h3>
+                    <ul>
+                        <li><a href="http://amzn.com/067232704X">Extending and Embedding PHP by Sara Golemon</a></li>
+                    </ul>
+                </section>
+            </section>
+            <section>
+                <h1>Questions?</h1>
+            </section>
+        </div>
+
     </div>
 
-</div>
+    <script src="lib/js/head.min.js"></script>
+    <script src="js/reveal.min.js"></script>
 
-<script src="lib/js/head.min.js"></script>
-<script src="js/reveal.min.js"></script>
-
-<script>
+    <script>
 
 // Full list of configuration options available here:
 // https://github.com/hakimel/reveal.js#configuration
-Reveal.initialize({
+    Reveal.initialize({
 controls: true,
 progress: true,
 history: true,
@@ -412,7 +496,7 @@ src: 'plugin/notes/notes.js', async: true, condition: function () {
 ]
 });
 
-</script>
+    </script>
 
-</body>
-</html>
+    </body>
+    </html>
