--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@ if (window.location.search.match(/print-pdf/gi)) {
                 <h2>Build Environment Setup</h2>
             </section>
             <section>
-                <p>Grab the latest PHP version from Github</p>
-                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">git clone https://github.com/php/php-src.git
-git checkout tags/php-5.6.3
+                <p>Grab the latest PHP version</p>
+                <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">wget -nv -O - http://uk1.php.net/distributions/php-5.6.3.tar.gz | tar zx
+cd php-5.6.3
                 </code></pre>
             </section>
             <section>
